# tspline_reader

./: CMakeLists.txt  FindTSPLINE.cmake  configure.sh  ex1.cpp  ex2.cpp
