CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}")

FIND_PACKAGE(TSPLINE REQUIRED)
message("TSPLINE_LIBRARIES:" ${TSPLINE_LIBRARIES})

INCLUDE_DIRECTORIES(${TSPLINE_INCLUDE_DIR})

set(file_list
    ex1
)

foreach(str ${file_list})
    ADD_EXECUTABLE(${str} ${str}.cpp)
    TARGET_LINK_LIBRARIES(${str} ${TSPLINE_LIBRARIES})
endforeach()

